# trivia-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  trivia.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  trivia.rockspec  trivia_sdk.lua  trivia_types.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  (+4 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  trivia_sdk.py  trivia_types.py
py/core/: context.py  error.py  response.py  result.py  spec.py  utility_type.py
py/entity/: api_category_entity.py  api_entity.py
py/feature/: cache_feature.py  clienttrack_feature.py  debug_feature.py  log_feature.py  proxy_feature.py  rbac_feature.py  retry_feature.py  telemetry_feature.py  test_feature.py
py/test/: feature_harness.py  runner.py  test_api_category_direct.py  test_api_category_entity.py  test_api_direct.py  test_api_entity.py  test_exists.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: feature_add.py  make_error.py  make_point.py  make_request.py  make_response.py  make_result.py  make_url.py  param.py  prepare_auth.py  prepare_body.py  prepare_headers.py  prepare_method.py  prepare_path.py  prepare_query.py  register.py  result_body.py  transform_response.py
(+432 files in other folders)
